@@ -237,4 +237,7 @@ Version x.y.z
     -->PROCESSING.L2.TDS.REMOVE_DATA.MUX_MODE.MARGIN_SEC
        PROCESSING.L2.SWEEP_DETECTION.SCDA.WINDOW_LENGTH_PTS
     -->PROCESSING.L2.SWEEP_DETECTION.SCDA.WINDOW_LENGTH_HK_CDF_RECORDS
-* Convert relevant settings from numeric-valued to logical-valued.
+       PROCESSING.CALIBRATION.VOLTAGE.DISABLE
+    -->PROCESSING.CALIBRATION.VOLTAGE.DISABLED
+* Convert relevant settings from numeric-valued to logical-valued for more
+  consistency.
